Improved code quality